--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ baseurl: https://blog.tbui.xyz
 languageCode: en-us
 theme: hugo-theme-stack
 paginate: 5
-title: Example Site
+title: Blog using Hugo and Github
 
 # Change it to your Disqus shortname before using
 disqusShortname: hugo-theme-stack
